2008-10-24  Edgar Friendly  <thelema314@gmail.com>

	* src/core/extlib/enum.ml*: [clump] added - helper for char enum -> string enum conversion

	* src/core/extlib/rope.ml*: [of_char] renamed to [of_uchar], [of_char] added to tke a non-utf char.

	* src/core/extlib/rope.ml*: [of_bulk_enum] added

	* src/core/extlib/rope.ml*: [make] added (redundant, but previous version probably had sharing problems)

	* src/core/extlib/rope.ml*: [create], [init], [of_int], [of_float], [to_nt], [to_float], [bulk_map], [map], [bulk_filter_map], [filter_map] added	

	* src/core/extlib/extUTF8.ml*: [init], [map], [filter_map] added

2008-10-24  David Teller  <David.Teller@univ-orleans.fr>

	* build/odoc_generator_batlib.ml: [generate_types_index] overloaded

	* src/core/extlib/innerIO.ml: [close_in] and [close_out] now use [noop] when closing again/flushing again
	  after the input/output is closed

	* src/core/extlib/IO.ml: [apply_enum] now uses [InnerIO.Input_closed]
	
	* src/core/extlib/IO.ml: [apply_enum] removed one

	* src/toplevel/batteries_help.ml: [browse] now displays an error message in case of problem

	* doc/batteries/documentation.idex: language.idex added

	* doc/batteries/language.idex: created

	* src/toplevel/batteries_help.ml: [help] added

	* src/toplevel/batteries_help.ml: [register] now looks for complete urls

	* src/toplevel/batteries_help.ml: [help*] renamed [man*]

	* Makefile: in [top], now using [ocaml -init]

	* build/odoc_generator_batlib.ml: in [generate_external_index] fixed typo: "mark" replaced with "type"

	* src/toplevel/batteries_help.ml: in [append], when creating new [RefList]s, adding element inside the list

2008-10-23  David Teller  <David.Teller@univ-orleans.fr>

	* src/syntax/pa_batteries/pa_batteries.ml: split [top_phrase] in two

	* Makefile: [DEST_TOP] added
	
	* src/core/batteries_core_threads.ml: [Help] removed

	* src/main/threads/batteries.ml: [Help] removed

	* src/main/nothreads/batteries.ml: [Help] removed
