@@ -34,6 +34,7 @@ ExtList
 ExtNativeint
 ExtStream
 ExtString
+Substring
 Unzip
 Std
 RefList
